--- a/bower.json
+++ b/bower.json
@@ -6,7 +6,7 @@
   "description": "",
   "main": "",
   "license": "MIT",
-  "homepage": "",
+  "homepage": "https://app-marwein.c9users.io/",
   "private": true,
   "ignore": [
     "**/.*",
@@ -18,6 +18,7 @@
   "dependencies": {
     "angular-animate": "^1.5.9",
     "angular-route": "^1.5.9",
-    "bootstrap": "^3.3.7"
+    "bootstrap": "^3.3.7",
+    "font-awesome": "fontawesome#^4.7.0"
   }
 }
